Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21832

Underlines don't line up if glyphs from another font are used (Arabic etc.)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.0.0
    • 4.7.4
    • None
    • openSUSE 11.3 + Qt 4.7.4
      openSUSE 11.3 + Qt 5
    • 21c98e52c5aab6f063457729ac8344134071f0c5

    Description

      (Cloned from https://projects.maemo.org/bugzilla/show_bug.cgi?id=276089)

      Whenever text is underlined that uses glyphs from another font because the widget's original font doesn't provide some of them (e.g., Arabic), the underlines are not properly lined up; they are jagged.

      This occurs most prominently in hyperlinks in Arabic text. In the original bug (see above), all apps used the "Nokia Pure" font that did (at that time) not contain Arabic glyphs, so the Arabic glyphs were taken from another font with slightly different font metrics - most importantly, with another underline position. The blanks between the Arabic text, however, were still taken from the original font, so the blanks were underlined at another position.

      See also test program and screenshots in the attached tarball.

      Fix is provided (see further comments).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            shundhammer Stefan Hundhammer
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes